<resources>
    <string name="app_name">FitnessApplication</string>
    <string name="login_username">Enter your username</string>
    <string name="login_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="login_registration">Registration</string>
    <string name="login_remember_me">Remember me</string>
    <string name="login_auto_login">Auto login</string>

    <string name="reg_name">Enter your name</string>
    <string name="reg_username">Enter your username</string>
    <string name="reg_password">Enter your password</string>
    <string name="reg_confirm_password">Confirm your password</string>
    <string name="reg_button">Registration</string>
    <string name="reg_user_already_exists">User already exists</string>
    <string name="reg_user_created">User created</string>
    <string name="reg_select_user_type">Select an user type</string>
    <string name="reg_password_dont_match">Inserted passwords do not match</string>
    <string name="reg_characters_fail">You have to enter between 6 and 20 characters</string>

    <string name="trainee_option_exercises">Exercises</string>
    <string name="trainee_option_trainer">Trainers</string>
    <string name="trainee_option_settings">Settings</string>

    <string name="trainer_option_upload">Upload</string>
    <string name="trainer_option_my_content">My content</string>
    <string name="trainer_option_settings">Settings</string>

    <string name="trainee_muscle_group_arms">Arms</string>
    <string name="trainee_muscle_group_legs">Legs</string>
    <string name="trainee_muscle_group_abs">Abs</string>
    <string name="trainee_muscle_group_chest">Chest</string>
    <string name="trainee_muscle_group_back">Back</string>
    <string name="trainee_muscle_group_shoulders">Shoulders</string>

    <string-array name="registration_user_types">
        <item>Trainer</item>
        <item>Trainee</item>
    </string-array>

    <string-array name="trainee_muscle_groups">
        <item>Arms</item>
        <item>Legs</item>
        <item>Abs</item>
        <item>Chest</item>
        <item>Back</item>
        <item>Shoulders</item>
        <item>Others</item>
    </string-array>

    <string name="back_button_press">Please click BACK again to exit!</string>
    <string name="trainers_list">Trainers list</string>
    <string name="user_not_found">User not Found</string>
    <string name="dark_mode">Dark mode</string>
    <string name="change_password">Change password</string>
    <string name="change_name">Change name</string>
    <string name="enter_new_name">Enter your new name</string>
    <string name="old_password">Enter old password</string>
    <string name="new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="change_name_dialog_title">Change name</string>
    <string name="change_password_dialog_title">Change password</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="cancel_change_name">Name was not changed</string>
    <string name="cancel_change_password">Password was not changed</string>
    <string name="change_name_successful">Your name has been changed</string>
    <string name="change_password_successful">Your password has been changed</string>
    <string name="old_new_password_match">Enter a new password</string>
    <string name="new_confirm_new_passwords_dont_match">The passwords do not match</string>
    <string name="muscle_groups">Muscle groups</string>


    <string name="change_content_dialog_title">Change Content</string>
    <string name="cancel_change_content">Content was not changed</string>
    <string name="cancel_change_description">Description was not changed</string>
    <string name="change_title_successful">Your title has been changed</string>
    <string name="change_description_successful">Your description has been changed</string>
    <string name="enter_new_title">Enter New Title</string>
    <string name="enter_new_description">Enter New Description</string>
    <string name="change_content_successful">Your content has been modified</string>
    <string name="upload_successful">Your content has been uploaded</string>
    <string name="change_content">Change Content</string>
    <string name="mini">mini</string>
    <string name="full">full</string>
    <string name="trainer_my_content_error">Trainer my content error</string>

    <string name="delete_content_dialog_title">Delete Content</string>
    <string name="cancel_delete_content">Content was not deleted</string>
    <string name="delete_content_successful">Your content has been deleted</string>

    <string name="video_selected">A video was selected</string>
    <string name="uploaded">Uploaded </string>
    <string name="failed">Failed </string>

</resources>
