<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TraineeHomeFragment">


    <Button
        android:id="@+id/button_home_trainee_exercises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/trainee_option_exercises"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_home_trainee_trainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/trainee_option_trainer"
        app:layout_constraintEnd_toEndOf="@+id/button_home_trainee_exercises"
        app:layout_constraintStart_toStartOf="@+id/button_home_trainee_exercises"
        app:layout_constraintTop_toBottomOf="@+id/button_home_trainee_exercises" />

    <Button
        android:id="@+id/button_home_trainee_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/trainee_option_settings"
        app:layout_constraintEnd_toEndOf="@+id/button_home_trainee_trainer"
        app:layout_constraintStart_toStartOf="@+id/button_home_trainee_trainer"
        app:layout_constraintTop_toBottomOf="@+id/button_home_trainee_trainer" />

</androidx.constraintlayout.widget.ConstraintLayout>