<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/dp10"
    android:layout_marginStart="@dimen/dp10"
    android:layout_marginBottom="@dimen/dp10"
    android:layout_marginTop="@dimen/dp20">

    <EditText
        android:id="@+id/editText_change_password_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/colorText"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/dp30"
        android:layout_marginBottom="@dimen/dp10"
        android:layout_marginStart="@dimen/dp30"
        android:layout_marginEnd="@dimen/dp30"/>

    <EditText
        android:id="@+id/editText_change_password_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/new_password"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginBottom="@dimen/dp10"
        android:layout_marginStart="@dimen/dp30"
        android:layout_marginEnd="@dimen/dp30"/>

    <EditText
        android:id="@+id/editText_change_password_confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:ems="10"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginBottom="@dimen/dp10"
        android:layout_marginStart="@dimen/dp30"
        android:layout_marginEnd="@dimen/dp30"/>
</LinearLayout>